Fix: Profile wrapper padding on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
 }
 body{
     color: var(--github-black);
+    line-height: 1.25;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
 }
 
@@ -477,7 +478,7 @@ padding-left: 0px !important;
     }
 
   
-    .profile-wrapper :is(.sidebar, .repos){
+    .profile-wrapper .sidebar, .profile-wrapper .repos{
         width: calc(100% - 32px);
         padding:  0px 16px;
     }
